# GerenciadorDeTarefas

./: CMakeLists.txt  GUI.cpp  GUI.h  Process.cpp  Process.h  ProcessMonitor.cpp  ProcessMonitor.h  README.md  main.cpp
